# HSE-Course_2sem

./: .gitignore  CMakeLists.txt  README.md
homework-1/: .gitignore  CMakeLists.txt  README.md  graph.h  tests.cpp
homework-1/src/: CMakeLists.txt  arcGraph.cpp  arcGraph.h  graphConverter.cpp  graphConverter.h  graphTraveler.h  graph_builder.hpp  listGraph.cpp  listGraph.h  matrixGraph.cpp  matrixGraph.h  node.cpp  node.h  nodePair.cpp  nodePair.h  ptrsGraph.cpp  ptrsGraph.h
homework-2/: CMakeLists.txt  Dockerfile  Readme.md  static_array.cpp  static_array.h  tests  tests.cpp
homework-3/: CMakeSettings.json  README.md  tests.cpp
homework-3/type_traits/: is_copy_constructible.h  is_nothrow_move_constructible.h  move_if_noexcept.h  utility.h
